remove useless resource and fix display on mobile device

--- a/style/main.css
+++ b/style/main.css
@@ -598,6 +598,7 @@ hr {
   }
   .container {
     width: 280px;
+    overflow-x: hidden;
     margin: 0 auto;
   }
   .score-container, .best-container {
